fix: hapus text-align center pada konten tentang, judul tetap center

--- a/public/general/assets/css/lsp.css
+++ b/public/general/assets/css/lsp.css
@@ -851,12 +851,12 @@ ul.slick-dots {
 
 .more-info .left-content {
     padding: 45px 45px 45px 30px;
-    text-align: center;
     overflow-wrap: break-word;
     word-wrap: break-word;
 }
 
 .more-info .left-content span {
+    text-align: center;
     text-transform: uppercase;
     font-size: 15px;
     color: #666;
@@ -899,7 +899,6 @@ ul.slick-dots {
 }
 
 .testimonial-item .inner-content {
-    text-align: center;
     background-color: #fff;
     padding: 32px;
     border-radius: 16px;
